# tmp_debug_ruff

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/: __init__.py  blah.py
